[project]
name = "modified-logger"
version = "1.2.0"
description = "Personal logging abstract from python's logging library that fits my needs"
authors = [{ name = "James Baker", email = "james.baker@vanderbilt.edu" }]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"

[project.license]
text = "Apache-2.0"

[project.optional-dependencies]
docs = [
    "sphinx>=8.1.3",
    "sphinx-design>=0.6.1",
    "sphinx-copybutton>=0.5.2",
    "sphinx-autobuild>=2024.10.3",
    "shibuya>=2025.9.25",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[dependency-groups]
dev = ["black>=24.8.0"]
